ECA-11191: Replacing references to constructors of Float, Integer, Boolean, Long with respective valueOf methods.